# ort_ims

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
ort_ims/: conftest.py
ort_ims/common/: views.py
ort_ims/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
ort_ims/libs/makereports/: harmonic.py
ort_ims/libs/report/: make_template.py
ort_ims/managements/: apps.py  forms.py  models.py  urls.py  views.py
ort_ims/managements/fixtures/: customer.json  producttype.json  testitem.json
ort_ims/managements/migrations/: 0001_initial.py  0002_tcustcode_tproducttype_ttestitem.py  0003_alter_ttechnician_tech_email_and_more.py  0004_alter_ttestitem_remark.py
ort_ims/ortreports/: __init__.py  apps.py  models.py  urls.py  views.py
ort_ims/ortreports/libs/makereports/: __init__.py  harmonic.py
ort_ims/ortreports/libs/report/: make_template.py
ort_ims/ortreports/libs/utils/: timer.py  zips.py
ort_ims/plans/: admin.py  apps.py  csv2fixtures.py  forms.py  models.py  ortplanforms.py  report_template.py  urls.py  views.py
ort_ims/plans/fixtures/: customer.json  producttype.json  testitem.json
ort_ims/plans/libs/report/: gen_template.py
ort_ims/plans/migrations/: 0001_initial.py  0002_delete_ttechnician.py  0003_alter_tschedule_customer_alter_tschedule_product_and_more.py  0004_alter_tcheckouts_remarks_alter_tcheckouts_sn_and_more.py  0005_remove_tcheckouts_remarks_tcheckouts_remark_and_more.py  0006_alter_tcheckouts_checkout_qty.py
ort_ims/plans/static/css/: checkouts.css  index.css  resizable-table.css
ort_ims/plans/static/data/: testitem.csv
ort_ims/plans/static/js/: datas_table.js
ort_ims/plans/templates/ortplans/: auth_base.html  calendar.html  checkouts.html  custproducts.html  edit_checkouts.html  edit_table1.html  index.html  ort_base.html  schedules.html  technicians.html  testitems.html
ort_ims/plans/templatetags/: ORTplans_extras.py
ort_ims/reports/: __init__.py  apps.py  forms.py  models.py  urls.py  views.py
ort_ims/reports/migrations/: 0001_initial.py  0002_rename_remarks_tortreports_remark.py
ort_ims/static/css/: base.css  cal.css  docs.css
ort_ims/static/data/: custcode.csv  producttype.csv
ort_ims/static/js/: cal.js  resizable-table.js
ort_ims/templates/: base.html  index.html  ort_base.html
ort_ims/templates/managements/: custproducts.html  technicians.html  testitems.html
ort_ims/templates/ortreports/: emc.html
ort_ims/templates/plans/: checkouts.html  edit_checkouts.html  edit_table1.html  index.html  ort_base.html  schedules.html
ort_ims/templates/reports/: amz.html  burn.html  harmonic.html
ort_ims/users/: adapters.py  apps.py  models.py  views.py
ort_ims/users/api/: serializers.py  views.py
ort_ims/users/migrations/: 0001_initial.py
ort_ims/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
ort_ims/users/tests/api/: test_urls.py  test_views.py
思路/: .$ORTRper.drawio.bkp  ORTRper.drawio
思路/报告模板/: 制作模板.md
